Tests/InvalidTests/Test3_invalid_operands/test.as
;use register which not exists in assembler
mov r8, r1

;invalid operand
.data 6, *7, 4

;invalid number of operands
stop r1
